temporary fix to form not appearing on firefox in the right spot.. absolute positioning is not ideal but better than being cut off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,12 +436,20 @@ a:hover {
   opacity: 60%; 
 }
 
-
+/* .form-wrapper {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 900;
+} */
 
 form {
   height: 520px;
   width: 350px;
-  position: fixed;
+  position: absolute;
+
   border-radius: 10px;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
